--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ h6 {
 }
 
 #main-top .box .title-1 {
-  letter-spacing: 0.8rem;
+  letter-spacing: 0.5rem;
 }
 
 #main-top .box .title-2 {
@@ -256,8 +256,6 @@ h6 {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-filter: contrast(70%);
-          filter: contrast(70%);
 }
 
 @media (min-width: 768px) {
@@ -296,6 +294,12 @@ h6 {
   z-index: 2;
 }
 
+@media (max-width: 468px) {
+  #exploring .box-ex {
+    top: -23px;
+  }
+}
+
 #exploring .box-ex .title-1 {
   letter-spacing: 0.8rem;
   font-size: 7.4vmin;
@@ -304,6 +308,12 @@ h6 {
 #exploring .box-ex .title-2 {
   letter-spacing: 0.4rem;
   font-size: 4.4vmin;
+}
+
+@media (max-width: 468px) {
+  #exploring .box-ex .title-2 {
+    font-size: 3.1vmin;
+  }
 }
 
 /* reviewing */
